Implemented endpoints to find and cancel transfers
GET /transfers
DELETE /transfer/{id}

Customized the Swagger UI details and theme

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,11 @@
 # Settings that should be overridable with environment variables must (also) be in this file
-
 proxy.parsers.zenodo=
 proxy.transfer.destination=
+
+# OpenApi configuration
+mp.openapi.extensions.smallrye.info.title=EOSC Future Data Transfer API
+mp.openapi.extensions.smallrye.info.description=The backend API that abstracts data transfer services in EOSC Future.
+mp.openapi.extensions.smallrye.info.contact.name=EOSC Future
+mp.openapi.extensions.smallrye.info.contact.url=https://eoscfuture.eu/contact/
+mp.openapi.extensions.smallrye.info.license.name=Apache 2.0
+mp.openapi.extensions.smallrye.info.license.url=http://www.apache.org/licenses/LICENSE-2.0.html
