Added guide to deploy

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@
 proxy.parsers.zenodo=
 
 # OpenApi configuration
-mp.openapi.extensions.smallrye.info.title=EOSC Future Data Transfer API
-mp.openapi.extensions.smallrye.info.description=The backend API that abstracts data transfer services in EOSC Future.
+mp.openapi.extensions.smallrye.info.title=EOSC Data Transfer API
+mp.openapi.extensions.smallrye.info.description=Backend API that abstracts data transfer services in EOSC Future.
 mp.openapi.extensions.smallrye.info.contact.name=EOSC Future
 mp.openapi.extensions.smallrye.info.contact.url=https://eoscfuture.eu/contact/
 mp.openapi.extensions.smallrye.info.license.name=Apache 2.0
