--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -26,7 +26,7 @@ quarkus:
       format: "%d{HH:mm:ss} %-5p [%c{2.}]] (%t) %s%e%n"
     file:
       enable: true
-      path: ./data-transfer.log
+      path: ./log/data-transfer.log
       level: INFO
       format: "%d{HH:mm:ss} %-5p [%c{2.}]] (%t) %s%e%n"
   swagger-ui:
