--- a/src/main/docker/docker-compose.yaml
+++ b/src/main/docker/docker-compose.yaml
@@ -1,7 +1,7 @@
 version: '3.5'
 
 volumes:
-  eosc_future_cert:
+  data_transfer_cert:
 
 services:
   cert:
@@ -19,7 +19,7 @@ services:
       - "80:80"
       - "443:443"
     volumes:
-      - eosc_future_cert:/etc/letsencrypt
+      - data_transfer_cert:/etc/letsencrypt
     healthcheck:
       test: [ 'CMD', '/opt/status.sh' ]
       start_period: 30s
