--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,20 +1,20 @@
 proxy:
   parsers:
-    zenodo: https://zenodo.org
+    zenodo:
+      name: Zenodo
+      url: https://zenodo.org
+      class: parser.zenodo.ZenodoParser
+      timeout: 5000
   transfer:
     destinations:
       dcache: fts
-      datahub: another
+      storm: fts
     services:
       fts:
         name: File Transfer Service
         url: https://fts3-public.cern.ch:8446
         class: egi.eu.EgiDataTransfer
         timeout: 5000
-      another:
-        name: Test
-        url: https://nowhere.com:6578
-        class: egi.eu.Test
 
 quarkus:
   log:
@@ -39,7 +39,7 @@ quarkus:
     urls-primary-name: default
   smallrye-openapi:
     path: /openapi
-    info-version: 1.0.9
+    info-version: 1.0.10
   jackson:
     fail-on-unknown-properties: false
   http:
