--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -27,7 +27,7 @@ proxy:
         auth: token
     services:
       fts:
-        name: File Transfer Service
+        name: EGI Data Transfer
         url: https://fts3-public.cern.ch:8446
         class: egi.eu.EgiDataTransfer
         timeout: 5000
