Forwarded decision if browse storage is supported to the configured transfer service

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,7 +19,7 @@ proxy:
         auth: keys
         description: Amazon S3 compatible object storage
       ftp:
-        service: fts
+        service: globus
         auth: password
         description: FTP server
     services:
