--- a/src/main/docker/.env.template
+++ b/src/main/docker/.env.template
@@ -28,6 +28,11 @@ SERVICE_URL=http://localhost:8080
 # Email used to obtain SSL certificate
 SERVICE_EMAIL=levente.farkas@egi.eu
 
+#
+# Trust store(s) for the transfer service(s)
+#PROXY_TRANSFER_SERVICES_FTS_TRUST_STORE_FILE=
+PROXY_TRANSFER_SERVICES_FTS_TRUST_STORE_PASSWORD=password
+
 
 ####################################################################################################
 ## EOSC Future Data Transfer Proxy                                                                ##
