--- a/src/main/docker/docker-compose.yaml
+++ b/src/main/docker/docker-compose.yaml
@@ -32,6 +32,8 @@ services:
     image: eosc/data-transfer-api:latest
     build:
       context: data-transfer/
+      args:
+        - FTS_KEY_STORE_PASSWORD=${FTS_KEY_STORE_PASSWORD}
     ports:
       - "8080:8080"
     restart: unless-stopped
