--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,10 +17,12 @@ eosc:
       dcache:
         service: fts
         auth: token
+        protocol: https
         description: EGI dCache
       s3:
         service: fts
         auth: keys
+        protocol: s3
         description: Amazon S3 compatible object storage
     service:
       fts:
@@ -63,7 +65,7 @@ quarkus:
 
   smallrye-openapi:
     path: /openapi
-    info-version: 1.0.40
+    info-version: 1.0.42
   jackson:
     fail-on-unknown-properties: false
   http:
