--- a/src/main/docker/.env.template
+++ b/src/main/docker/.env.template
@@ -1,91 +1,75 @@
 # Variables in this file will be substituted into docker-compose.yml
 # Save a copy of this file as .env and insert your own values.
 # Verify correct substitution with "docker-compose config"
-# If variables are newly added or enabled, please delete and rebuild the images to pull in changes:
-# docker-compose down
-# docker rmi -f eosc/data-transfer-proxy eosc/data-transfer-cert
-# docker rmi $(docker images -f dangling=true -q)
-# docker-compose build
-# docker-compose up -d
-# docker-compose restart data-transfer
+# If variables are newly added or enabled, please delete and rebuild the images to pull in changes
 
-#
 # The hostname where the service will be deployed
 # If different from localhost, a SSL certificate will be requested for this domain, 
 # so make sure the machine can be reached from the Internet using this hostname
 SERVICE_DOMAIN=localhost
 
-#
 # On AWS, your SERVICE_URL is the output of:
 # curl -s http://169.254.169.254/latest/meta-data/public-hostname
 # SERVICE_URL=http://ec2-xxx-xxx-xxx-xxx.ap-southeast-2.compute.amazonaws.com
-# On OSX with Docker for Mac, your CKAN_SITE_URL is
+# On OSX with Docker for Mac, your SERVICE_URL is
 # SERVICE_URL=http://docker.for.mac.localhost:8080
 # When running locally, SERVICE_URL must contain the port
-SERVICE_URL=http://localhost:8080
+SERVICE_PORT=8080
+SERVICE_URL=http://localhost:${SERVICE_PORT}
+QUARKUS_HTTP_PORT=${SERVICE_PORT}
 
-#
 # Email used to obtain SSL certificate
 SERVICE_EMAIL=levente.farkas@egi.eu
 
-#
+
+####################################################################################################
+## EGI File Transfer                                                                              ##
+####################################################################################################
+
 # Password for (optional) keystore of EGI FTS service
 FTS_KEY_STORE_PASSWORD=password
 
 
 ####################################################################################################
-## Java                                                                                           ##
+## Telemetry                                                                                      ##
 ####################################################################################################
-#
-# You can configure Java behavior using the following environment properties:
-#
-# - JAVA_OPTS: JVM options passed to the `java` command (example: "-verbose:class")
-# - JAVA_OPTS_APPEND: User specified Java options to be appended to generated options
-#   in JAVA_OPTS (example: "-Dsome.property=foo")
-# - JAVA_MAX_MEM_RATIO: Is used when no `-Xmx` option is given in JAVA_OPTS. This is
-#   used to calculate a default maximal heap memory based on a containers restriction.
-#   If used in a container without any memory constraints for the container then this
-#   option has no effect. If there is a memory constraint then `-Xmx` is set to a ratio
-#   of the container available memory as set here. The default is `50` which means 50%
-#   of the available memory is used as an upper boundary. You can skip this mechanism by
-#   setting this value to `0` in which case no `-Xmx` option is added.
-# - JAVA_INITIAL_MEM_RATIO: Is used when no `-Xms` option is given in JAVA_OPTS. This
-#   is used to calculate a default initial heap memory based on the maximum heap memory.
-#   If used in a container without any memory constraints for the container then this
-#   option has no effect. If there is a memory constraint then `-Xms` is set to a ratio
-#   of the `-Xmx` memory as set here. The default is `25` which means 25% of the `-Xmx`
-#   is used as the initial heap size. You can skip this mechanism by setting this value
-#   to `0` in which case no `-Xms` option is added (example: "25")
-# - JAVA_MAX_INITIAL_MEM: Is used when no `-Xms` option is given in JAVA_OPTS.
-#   This is used to calculate the maximum value of the initial heap memory. If used in
-#   a container without any memory constraints for the container then this option has
-#   no effect. If there is a memory constraint then `-Xms` is limited to the value set
-#   here. The default is 4096MB which means the calculated value of `-Xms` never will
-#   be greater than 4096MB. The value of this variable is expressed in MB (example: "4096")
-# - JAVA_DIAGNOSTICS: Set this to get some diagnostics information to standard output
-#   when things are happening. This option, if set to true, will set
-#  `-XX:+UnlockDiagnosticVMOptions`. Disabled by default (example: "true").
-# - JAVA_DEBUG: If set remote debugging will be switched on. Disabled by default (example:
-#    true").
-# - JAVA_DEBUG_PORT: Port used for remote debugging. Defaults to 5005 (example: "8787").
-# - CONTAINER_CORE_LIMIT: A calculated core limit as described in
-#   https://www.kernel.org/doc/Documentation/scheduler/sched-bwc.txt. (example: "2")
-# - CONTAINER_MAX_MEMORY: Memory limit given to the container (example: "1024").
-# - GC_MIN_HEAP_FREE_RATIO: Minimum percentage of heap free after GC to avoid expansion.
-#   (example: "20")
-# - GC_MAX_HEAP_FREE_RATIO: Maximum percentage of heap free after GC to avoid shrinking.
-#   (example: "40")
-# - GC_TIME_RATIO: Specifies the ratio of the time spent outside the garbage collection.
-#   (example: "4")
-# - GC_ADAPTIVE_SIZE_POLICY_WEIGHT: The weighting given to the current GC time versus
-#   previous GC times. (example: "90")
-# - GC_METASPACE_SIZE: The initial metaspace size. (example: "20")
-# - GC_MAX_METASPACE_SIZE: The maximum metaspace size. (example: "100")
-# - GC_CONTAINER_OPTIONS: Specify Java GC to use. The value of this variable should
-#   contain the necessary JRE command-line options to specify the required GC, which
-#   will override the default of `-XX:+UseParallelGC` (example: -XX:+UseG1GC).
-# - HTTPS_PROXY: The location of the https proxy. (example: "myuser@127.0.0.1:8080")
-# - HTTP_PROXY: The location of the http proxy. (example: "myuser@127.0.0.1:8080")
-# - NO_PROXY: A comma separated lists of hosts, IP addresses or domains that can be
-#   accessed directly. (example: "foo.example.com,bar.example.com")
-#
+
+# Jaeger
+JAEGER_SERVICE_PORT=16686
+JAEGER_COLLECTOR_PORT=4319
+JAEGER_SERVICE_HOST=jaeger
+
+# Prometheus
+PROMETHEUS_SERVICE_PORT=9090
+PROMETHEUS_SERVICE_HOST=prometheus
+PROMETHEUS_ADDR=${PROMETHEUS_SERVICE_HOST}:9090
+
+# Loki
+LOKI_COLLECTOR_PORT=3100
+LOKI_SERVICE_HOST=loki
+LOKI_ADDR=${LOKI_SERVICE_HOST}:3100
+
+# Grafana
+GRAFANA_SERVICE_PORT=3000
+GRAFANA_SERVICE_HOST=grafana
+
+# OpenTelemetry Collector
+OTEL_COLLECTOR_HOST=otelcol
+OTEL_COLLECTOR_PORT=4317
+HTTP_COLLECTOR_PORT=4318
+OTEL_EXPORTER_OTLP_ENDPOINT=http://${OTEL_COLLECTOR_HOST}:4317
+OTEL_EXPORTER_OTLP_TRACES_ENDPOINT=${OTEL_EXPORTER_OTLP_ENDPOINT}
+OTEL_EXPORTER_OTLP_METRICS_ENDPOINT=${OTEL_EXPORTER_OTLP_ENDPOINT}
+OTEL_EXPORTER_OTLP_LOGS_ENDPOINT=${OTEL_EXPORTER_OTLP_ENDPOINT}
+PUBLIC_OTEL_EXPORTER_OTLP_TRACES_ENDPOINT=http://localhost:4318/v1/traces
+
+# Exporter protocol configuration
+OTEL_TRACES_EXPORTER=otlp
+OTEL_METRICS_EXPORTER=otlp
+OTEL_LOGS_EXPORTER=otlp
+
+# OpenTelemetry Resource Definitions
+OTEL_RESOURCE_ATTRIBUTES="service.namespace=eosc"
+
+# Metrics Temporality
+OTEL_EXPORTER_OTLP_METRICS_TEMPORALITY_PREFERENCE=cumulative
