Added tracing to SSL terminator Nginx

--- a/src/main/docker/cert/nginx.conf
+++ b/src/main/docker/cert/nginx.conf
@@ -2,6 +2,9 @@ daemon off;
 worker_processes 1;
 pid /var/run/nginx.pid;
 
+# OpenTelemetry - make sure to match version with the image of Dockerfile
+load_module /opt/opentelemetry-webserver-sdk/WebServerModule/Nginx/1.23.0/ngx_http_opentelemetry_module.so;
+
 events {
   worker_connections 1024;
 }
