--- a/src/main/docker/.env.template
+++ b/src/main/docker/.env.template
@@ -56,8 +56,8 @@ GRAFANA_SERVICE_HOST=grafana
 # OpenTelemetry Collector
 OTEL_COLLECTOR_HOST=otelcol
 OTEL_COLLECTOR_PORT=4317
-HTTP_COLLECTOR_PORT=4318
-OTEL_EXPORTER_OTLP_ENDPOINT=http://${OTEL_COLLECTOR_HOST}:4317
+OTEL_COLLECTOR_ADDR=${OTEL_COLLECTOR_HOST}:4317
+OTEL_EXPORTER_OTLP_ENDPOINT=http://${OTEL_COLLECTOR_ADDR}
 OTEL_EXPORTER_OTLP_TRACES_ENDPOINT=${OTEL_EXPORTER_OTLP_ENDPOINT}
 OTEL_EXPORTER_OTLP_METRICS_ENDPOINT=${OTEL_EXPORTER_OTLP_ENDPOINT}
 OTEL_EXPORTER_OTLP_LOGS_ENDPOINT=${OTEL_EXPORTER_OTLP_ENDPOINT}
