--- a/src/main/docker/.env.template
+++ b/src/main/docker/.env.template
@@ -3,23 +3,25 @@
 # Verify correct substitution with "docker-compose config"
 # If variables are newly added or enabled, please delete and rebuild the images to pull in changes
 
+# Email used to obtain SSL certificate
+SERVICE_EMAIL=levente.farkas@egi.eu
+
 # The hostname where the service will be deployed
-# If different from localhost, a SSL certificate will be requested for this domain, 
+# If different from localhost, a SSL certificate will be requested for this domain,
 # so make sure the machine can be reached from the Internet using this hostname
 SERVICE_DOMAIN=localhost
 
 # On AWS, your SERVICE_URL is the output of:
 # curl -s http://169.254.169.254/latest/meta-data/public-hostname
 # SERVICE_URL=http://ec2-xxx-xxx-xxx-xxx.ap-southeast-2.compute.amazonaws.com
-# On OSX with Docker for Mac, your SERVICE_URL is
+# On OSX with Docker for Mac, your SERVICE_URL is:
 # SERVICE_URL=http://docker.for.mac.localhost:8080
 # When running locally, SERVICE_URL must contain the port
-SERVICE_PORT=8080
+SERVICE_PORT=8081
 SERVICE_URL=http://localhost:${SERVICE_PORT}
-QUARKUS_HTTP_PORT=${SERVICE_PORT}
 
-# Email used to obtain SSL certificate
-SERVICE_EMAIL=levente.farkas@egi.eu
+# The port on which the Grafana dashboards will be available
+TELEMETRY_PORT=8080
 
 
 ####################################################################################################
@@ -37,21 +39,12 @@ FTS_KEY_STORE_PASSWORD=password
 # Jaeger
 JAEGER_SERVICE_PORT=16686
 JAEGER_COLLECTOR_PORT=4319
-JAEGER_SERVICE_HOST=jaeger
-
-# Prometheus
-PROMETHEUS_SERVICE_PORT=9090
-PROMETHEUS_SERVICE_HOST=prometheus
-PROMETHEUS_ADDR=${PROMETHEUS_SERVICE_HOST}:9090
 
 # Loki
 LOKI_COLLECTOR_PORT=3100
-LOKI_SERVICE_HOST=loki
-LOKI_ADDR=${LOKI_SERVICE_HOST}:3100
 
-# Grafana
-GRAFANA_SERVICE_PORT=3000
-GRAFANA_SERVICE_HOST=grafana
+# Prometheus
+PROMETHEUS_SERVICE_PORT=9090
 
 # OpenTelemetry Collector
 OTEL_COLLECTOR_HOST=otelcol
