--- a/src/main/docker/grafana/grafana.ini
+++ b/src/main/docker/grafana/grafana.ini
@@ -404,7 +404,7 @@ serve_from_sub_path = true
 ;token_rotation_interval_minutes = 10
 
 # Set to true to disable (hide) the login form, useful if you use OAuth, defaults to false
-disable_login_form = true 
+disable_login_form = false
 
 # Set to true to disable the sign out link in the side menu. Useful if you use auth.proxy or auth.jwt, defaults to false
 ;disable_signout_menu = false
@@ -434,7 +434,7 @@ disable_login_form = true
 #################################### Anonymous Auth ######################
 [auth.anonymous]
 # enable anonymous access
-enabled = true 
+enabled = false
 
 # specify organization name that should be used for unauthenticated users
 org_name = Main Org.
@@ -443,7 +443,7 @@ org_name = Main Org.
 org_role = Admin 
 
 # mask the Grafana version number for unauthenticated users
-;hide_version = false
+hide_version = true
 
 #################################### GitHub Auth ##########################
 [auth.github]
@@ -557,7 +557,7 @@ org_role = Admin
 
 #################################### Basic Auth ##########################
 [auth.basic]
-;enabled = true
+enabled = true
 
 #################################### Auth Proxy ##########################
 [auth.proxy]
