--- a/src/main/docker/docker-compose.yaml
+++ b/src/main/docker/docker-compose.yaml
@@ -13,14 +13,14 @@ services:
   # ************************
   # Data Transfer components
   # ************************
-  # SSL offloading
+  # SSL terminator
   cert:
     container_name: data-transfer-ssl
     image: eosc/data-transfer-ssl:latest
     build:
       context: cert/
       args:
-        - SERVICE_URL=http://api:${SERVICE_PORT}
+        - SERVICE_URL=http://api:8081
         - SERVICE_DOMAIN=${SERVICE_DOMAIN}
         - SERVICE_EMAIL=${SERVICE_EMAIL}
         - TELEMETRY_URL=${OTEL_COLLECTOR_ADDR}
@@ -53,7 +53,7 @@ services:
       - logs:/deployments/logs:rw
     restart: unless-stopped
     ports:
-      - "${SERVICE_PORT}:${SERVICE_PORT}"
+      - "${SERVICE_PORT}:8081"
     depends_on:
       - otelcol
 
@@ -70,7 +70,7 @@ services:
       - "--query.base-path"
       - "/jaeger/ui"
       - "--prometheus.server-url"
-      - "http://${PROMETHEUS_ADDR}"
+      - "http://prometheus:9090"
     environment:
       - COLLECTOR_OTLP_ENABLED=true
       - METRICS_STORAGE_TYPE=prometheus
@@ -82,6 +82,16 @@ services:
     ports:
       - "${JAEGER_SERVICE_PORT}:16686" # Jaeger UI
       - "${JAEGER_COLLECTOR_PORT}:4317"
+
+  # Loki (logs)
+  loki:
+    image: grafana/loki:2.4.1
+    container_name: loki
+    volumes:
+      - ./loki/loki.yaml:/etc/loki/local-config.yaml
+    restart: unless-stopped
+    ports:
+      - "${LOKI_COLLECTOR_PORT}:3100"
 
   # Prometheus (metrics)
   prometheus:
@@ -105,19 +115,9 @@ services:
     ports:
       - "${PROMETHEUS_SERVICE_PORT}:9090"
 
-  # Loki (logs)
-  loki:
-    image: grafana/loki:latest
-    container_name: loki
-    volumes:
-      - ./loki/loki.yaml:/etc/loki/local-config.yaml
-    restart: unless-stopped
-    ports:
-      - "${LOKI_COLLECTOR_PORT}:3100"
-
   # Grafana (dashboard)
   grafana:
-    image: grafana/grafana:latest
+    image: grafana/grafana:9.1.0
     container_name: grafana
     deploy:
       resources:
@@ -127,7 +127,7 @@ services:
       - ./grafana/grafana.ini:/etc/grafana/grafana.ini
       - ./grafana/provisioning/:/etc/grafana/provisioning/
     ports:
-      - "${GRAFANA_SERVICE_PORT}:3000"
+      - "${TELEMETRY_PORT}:3000"
 
   # OpenTelemetry collector
   otelcol:
