--- a/src/main/docker/grafana/provisioning/datasources/loki.yaml
+++ b/src/main/docker/grafana/provisioning/datasources/loki.yaml
@@ -2,9 +2,11 @@ apiVersion: 1
 
 datasources:
   - name: Loki
+    uid: my-logs
     type: loki
     access: proxy
     url: http://loki:3100
+    isDefault: false
     jsonData:
       maxLines: 1000
       derivedFields:
