--- a/src/main/docker/grafana/provisioning/datasources/prometheus.yaml
+++ b/src/main/docker/grafana/provisioning/datasources/prometheus.yaml
@@ -12,9 +12,9 @@ datasources:
         # Field with internal link pointing to data source in Grafana.
         # datasourceUid value can be anything, but it should be unique across all defined data source uids.
         - datasourceUid: my-traces
-          name: traceID
+          name: trace_id
 
-        # Field with external link.
-        - name: traceID
-          url: 'http://grafana:3000/explore?orgId=1&left=%5B%22now-1h%22,%22now%22,%22Jaeger%22,%7B%22query%22:%22$${__value.raw}%22%7D%5D'
-          urlDisplayLabel: View in Grafana
+        # Field with external link
+        - url: http://jaeger:16686/jaeger/ui/trace/$${__value.raw}
+          name: trace_id
+          urlDisplayLabel: View in Jaeger
