--- a/src/main/docker/prometheus/prometheus-config.yaml
+++ b/src/main/docker/prometheus/prometheus-config.yaml
@@ -11,3 +11,7 @@ scrape_configs:
   static_configs:
   - targets:
     - 'otelcol:8888'
+- job_name: data-transfer
+  static_configs:
+  - targets:
+    - 'api:8081'
