--- a/src/main/docker/.env.template
+++ b/src/main/docker/.env.template
@@ -6,19 +6,11 @@
 # Email used to obtain SSL certificate
 SERVICE_EMAIL=levente.farkas@egi.eu
 
-# The hostname where the service will be deployed
+# The hostname and port where the service will be deployed
 # If different from localhost, a SSL certificate will be requested for this domain,
 # so make sure the machine can be reached from the Internet using this hostname
 SERVICE_DOMAIN=localhost
-
-# On AWS, your SERVICE_URL is the output of:
-# curl -s http://169.254.169.254/latest/meta-data/public-hostname
-# SERVICE_URL=http://ec2-xxx-xxx-xxx-xxx.ap-southeast-2.compute.amazonaws.com
-# On OSX with Docker for Mac, your SERVICE_URL is:
-# SERVICE_URL=http://docker.for.mac.localhost:8080
-# When running locally, SERVICE_URL must contain the port
 SERVICE_PORT=8081
-SERVICE_URL=http://localhost:${SERVICE_PORT}
 
 # The port on which the Grafana dashboards will be available
 TELEMETRY_PORT=8080
